python-apt (0.8.0~exp5) UNRELEASED; urgency=low

  [ Julian Andres Klode ]
  * Increase Breaks for update-notifier to 0.99.3debian9
  * utils/get_debian_mirrors.py: Adjust for new Alioth SCM urls
  * debian/control: Standards-Version 3.9.2

  [ Tshepang Lekhonkhobe ]
  * Fix get_changelog in Python 3 (Closes: #626532)

 -- Julian Andres Klode <jak@debian.org>  Thu, 26 May 2011 18:01:57 +0200

python-apt (0.8.0~exp4) experimental; urgency=low

  * apt_pkg: Add OrderList, wanted for mancoosi (Closes: #623485)
  * apt_pkg: Add subclassing fun to PackageManager, for #623485 as well
  * apt.cache: Emit change signals in ProblemResolver
  * apt.Cache: Add a _changes_count member for later use

 -- Julian Andres Klode <jak@debian.org>  Fri, 29 Apr 2011 13:57:30 +0200

python-apt (0.8.0~exp3) experimental; urgency=low

  [ Stéphane Graber ]
  * Update enable_component to also apply to -src entries (LP: #758732)
  
  [ Julian Andres Klode ]
  * apt_pkg: Add apt_pkg.Version.multi_arch and friends

 -- Julian Andres Klode <jak@debian.org>  Thu, 21 Apr 2011 15:33:38 +0200

python-apt (0.8.0~exp2) experimental; urgency=low

  * aptsources: Parse multi-arch sources.list files correctly
  * aptsources: Allow insertion of new multi-arch entries
  * aptsources: Various cleanup work
  * all: Fix all instances of ResourceWarning about unclosed files
  * tests/test_apt_cache.py: Use assertTrue() instead of assert_()
  * apt_pkg: Raise error when parse_commandline gets empty argv (LP: #707416)
  * apt_pkg: Fix time_to_str, time_rfc1123 to accept more correct values
    (time_to_str accepts unsigned long, time_rfc1123 long long, y2k31-correct).
  * apt.progress: Use long for ETA, natural type for size (LP: #377375)
  * aptsources/sourceslist.py: s/aptsource.py/sourceslist.py/ (LP: #309603)
  * doc/examples: Add example on how to get architecture names (LP: #194374)
  * apt_pkg: Fix unsigned/long-vs-int issues (LP: #610820)