@@ -7,6 +7,7 @@ python-apt (0.8.0~exp5) UNRELEASED; urgency=low
 
   [ Tshepang Lekhonkhobe ]
   * Fix get_changelog in Python 3 (Closes: #626532)
+  * apt/package.py: fix a few typos [formated->formatted] (Closes: #597054)
 
  -- Julian Andres Klode <jak@debian.org>  Thu, 26 May 2011 18:01:57 +0200
 
